# C-PythonInterfacingExamples

./: .gitignore
src/fibonacci_cpp/: CMakeLists.txt  setup.py
src/fibonacci_cpp/fibonacci/: __init__.py  _fibonacci.cpp  fib.cpp  fib.h
src/fibonacci_cpp/test/: memtest.py  memtest_base.py  test.py
src/matmult_cpp/: CMakeLists.txt  setup.py
src/matmult_cpp/matmult/: __init__.py  _matmult.cpp  libmatmult.cpp  libmatmult.h
src/matmult_cpp/test/: test.py
